Disable nav links and update about me copy

--- a/index.html
+++ b/index.html
@@ -72,23 +72,23 @@
 						<li>
 							<a href="#about" class="scrollto">About Me</a>
 						</li>
-						<li>
-							<a href="#portfolio" class="scrollto">My Work</a>
-						</li>
 						<li id="logo">
 							<a href="#home" class="scrollto">
 								<h1>M<span>R</span></h1>
 							</a>
 						</li>
 						<li>
-							<a href="#contact" class="scrollto">Contact Me</a>
+							<a href="#portfolio" class="scrollto">My Work</a>
 						</li>
 						<li>
+							<a href="#contact" class="scrollto">Contact Me</a>
+						</li>
+<!-- 						<li>
 							<a href="http://blog.codemickeycode.com/" target="_blank">My Blog</a>
 						</li>
 						<li>
 							<a href="http://codehappy.ph/" target="_blank">My Team</a>
-						</li>
+						</li> -->
 					</ul>
 				</div><!--End navbar-collapse -->
 
@@ -210,7 +210,7 @@
 
 						<p class="text-center scrollimation fade-in">I build and maintain CMS, E-commerce and various websites with Python, Django and Mezzanine.</p>
 
-						<p class="text-center scrollimation fade-in">If you're looking to have a website built or looking for project-based, remote Python devs <i class="fa fa-laptop" aria-hidden="true"></i>, let's talk <i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></p>
+						<p class="text-center scrollimation fade-in">If you're looking to have a website built or looking for project-based, remote Python devs <i class="fa fa-laptop" aria-hidden="true"></i>, my team and I can help. Let's talk <i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></p>
 
 					</div>
 
