Update portfolio section

--- a/index.html
+++ b/index.html
@@ -392,7 +392,35 @@
 
 				<div id="projects-container">
 
-										<!-- ==============================================
+					<!-- ==============================================
+					SINGLE PROJECT ITEM
+					=============================================== -->
+					<article class="project-item web-design">
+
+						<img class="img-responsive project-image" src="assets/lalafunland-r.png"  alt=""><!--Project thumb -->
+
+						<div class="hover-mask">
+							<h2 class="project-title">La La Fun Land</h2><!--Project Title -->
+							<p>Static Company Website</p><!--Project Subtitle -->
+						</div>
+
+						<!--==== Project Preview HTML ====-->
+
+						<div class="sr-only project-description"
+							data-category="Static Website"
+							data-date="July 2016"
+							data-client="La La Fun Land"
+							data-link="http://lalafunland.com"
+							data-descr="website for CodeHappy"
+							data-images="assets/lala-surf-and-turf.png,assets/lala-desserts.png">
+							<p>A simple static website for La La fun Land, a restaurant in San Juan, Manila.
+							</p>
+
+							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://lalafunland.com">Visit Website<i class="fa fa-arrow-right"></i></a></p>
+						</div>
+
+					</article>
+					<!-- ==============================================
 					SINGLE PROJECT ITEM
 					=============================================== -->
 					<article class="project-item web-design">
@@ -407,7 +435,7 @@
 						<!--==== Project Preview HTML ====-->
 
 						<div class="sr-only project-description"
-							data-category="Content Management System"
+							data-category="Static Website"
 							data-date="July 2016"
 							data-client="CodeHappy.ph"
 							data-link="http://codehappy.ph"
