--- a/index.html
+++ b/index.html
@@ -411,9 +411,9 @@
 							data-date="July 2016"
 							data-client="La La Fun Land"
 							data-link="http://lalafunland.com"
-							data-descr="website for CodeHappy"
+							data-descr="website for La La Fun Land"
 							data-images="assets/lala-surf-and-turf.png,assets/lala-desserts.png">
-							<p>A simple static website for La La fun Land, a restaurant in San Juan, Manila.
+							<p>A simple static website for La La fun Land, a restaurant in San Juan, Manila. You have to try their bestsellers and desserts! ;)
 							</p>
 
 							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://lalafunland.com">Visit Website<i class="fa fa-arrow-right"></i></a></p>
