--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
 				<div class="row skills">
 
-					<h1 class="text-center scrollimation fade-in">Recommendations</h1>
+					<h1 class="text-center scrollimation fade-in">What people say about me</h1>
 				</div><!--End row -->
 
 				<div class="container">
