Update contact me CTA

--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
 					<p>Ready to start your next project with me or <a href="http://codehappy.ph/">my team</a>?<br/>That's great! Send me a message and I will get back to you as soon as possible :)</p>
 					<!-- <i class="fa fa-envelope-o fa-3x sr-contact" data-sr-id="10" style="; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "></i> -->
 					<!-- <p><a href="mailto:me@codemickeycode.com">me@codemickeycode.com</a></p> -->
-					<p class="text-center on-hover"><a class="btn btn-meflat icon-right" href="https://mickey64.typeform.com/to/dqYjXQ">Leave Message</a></p>
+					<p class="text-center"><a class="btn btn-meflat" href="https://mickey64.typeform.com/to/dqYjXQ"><i class="fa"></i>Leave Message</a></p>
 				</header>
 
 <!-- 				<form  id="contact-form" class="bl_form text-center" action="contact.php" method="post" novalidate>
