Add CTA on header

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
 						<h1>Hi, I'm Micaela Reyes</h1>
 						<p>a Web Developer based in Manila.</p>
+						<p class="text-center"><a class="btn btn-meflat" href="https://codemickeycode.typeform.com/to/dqYjXQ"><i class="fa"></i>Say hello</a></p>
 <!-- 						<h3>codemickeycode.com</h3>
 						<h2>CMS | E-commerce | Web Apps </h2> -->
 					</div>
