--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		Title and Meta Tags
 		=============================================== -->
 		<meta charset="utf-8">
-		<title>codemickeycode | Web Developer</title>
+		<title>codemickeycode | Software Engineer </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -108,7 +108,7 @@
 					<div class="col-sm-12 text-col text-center">
 
 						<h1>Hi, I'm Micaela Reyes</h1>
-						<p>a Web Developer based in Manila.</p>
+						<p>a Software Engineer based in Manila.</p>
 						<p class="text-center"><a class="btn btn-meflat" href="https://codemickeycode.typeform.com/to/dqYjXQ"><i class="fa"></i>Say hello</a></p>
 <!-- 						<h3>codemickeycode.com</h3>
 						<h2>CMS | E-commerce | Web Apps </h2> -->
@@ -153,8 +153,8 @@
 							<img class="img-responsive img-center" src="assets/service2.png" alt="" />
 						</div>
 
-						<h2>Web Development</h2>
-						<p>I build and maintain CMS, E-commerce and various websites with Python, Django and Mezzanine</p>
+						<h2>Web Development - Backend</h2>
+						<p>I build and maintain various websites with Python, Django and Mezzanine</p>
 
 					</div>
 
@@ -207,11 +207,9 @@
 
 						<p class="text-center scrollimation fade-in">Hi! I'm Mickey. I have an <strong>insane love</strong> for <strong>tech</strong> and <strong>building things.</strong></p>
 
-						<p class="text-center scrollimation fade-in">I’m a Software Engineer based in Manila with over 9 years industry experience.</p>
+						<p class="text-center scrollimation fade-in">I'm a software engineer with over a decade of experience working in the tech industry, providing valuable expertise to start-up businesses and enterprises.</p>
 
-						<p class="text-center scrollimation fade-in">I build and maintain CMS, E-commerce and various websites with Python, Django and Mezzanine.</p>
-
-						<p class="text-center scrollimation fade-in">If you're looking to have a website built or looking for project-based, remote Python devs <i class="fa fa-laptop" aria-hidden="true"></i>, my team and I can help. Let's talk <i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></p>
+						<p class="text-center scrollimation fade-in">If you're looking to have a website built, looking for project-based, remote Python devs <i class="fa fa-laptop" aria-hidden="true"></i>, or a Python Trainer<i class="fa chalkboard-teacher" aria-hidden="true"></i>, my team and I can help. Let's talk <i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></p>
 
 					</div>
 
@@ -260,14 +258,6 @@
 						<span class="chart" data-percent="70"><span class="percent">70</span></span>
 						<h2 class="text-center">Git</h2>
 					</div>
-<!-- 					<div class="col-sm-6 col-md-3 text-center">
-						<span class="chart" data-percent="60"><span class="percent">60</span></span>
-						<h2 class="text-center">Graphic Design</h2>
-					</div>
-					<div class="col-sm-6 col-md-3 text-center">
-						<span class="chart" data-percent="90"><span class="percent">90</span></span>
-						<h2 class="text-center">UI / UX</h2>
-					</div> -->
 
 				</div><!--End row -->
 
@@ -398,62 +388,6 @@
 					=============================================== -->
 					<article class="project-item web-design">
 
-						<img class="img-responsive project-image" src="assets/lalafunland-r.png"  alt=""><!--Project thumb -->
-
-						<div class="hover-mask">
-							<h2 class="project-title">La La Fun Land</h2><!--Project Title -->
-							<p>Static Company Website</p><!--Project Subtitle -->
-						</div>
-
-						<!--==== Project Preview HTML ====-->
-
-						<div class="sr-only project-description"
-							data-category="Static Website"
-							data-date="July 2016"
-							data-client="La La Fun Land"
-							data-link="http://lalafunland.com"
-							data-descr="website for La La Fun Land"
-							data-images="assets/lala-surf-and-turf.png,assets/lala-desserts.png">
-							<p>A simple static website for La La fun Land, a restaurant in San Juan, Manila. You have to try their bestsellers and desserts! ;)
-							</p>
-
-							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://lalafunland.com">Visit Website<i class="fa fa-arrow-right"></i></a></p>
-						</div>
-
-					</article>
-					<!-- ==============================================
-					SINGLE PROJECT ITEM
-					=============================================== -->
-					<article class="project-item web-design">
-
-						<img class="img-responsive project-image" src="assets/codehappy-mobile.png"  alt=""><!--Project thumb -->
-
-						<div class="hover-mask">
-							<h2 class="project-title">CodeHappy</h2><!--Project Title -->
-							<p>Static Company Website</p><!--Project Subtitle -->
-						</div>
-
-						<!--==== Project Preview HTML ====-->
-
-						<div class="sr-only project-description"
-							data-category="Static Website"
-							data-date="July 2016"
-							data-client="CodeHappy.ph"
-							data-link="http://codehappy.ph"
-							data-descr="website for CodeHappy"
-							data-images="assets/codehappy.png,assets/codehappy-web-dev.png,assets/codehappy-web-scraping.png">
-							<p>A simple static website for CodeHappy, a web development team in Manila
-							</p>
-
-							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://codehappy.ph">Visit Website<i class="fa fa-arrow-right"></i></a></p>
-						</div>
-
-					</article>
-					<!-- ==============================================
-					SINGLE PROJECT ITEM
-					=============================================== -->
-					<article class="project-item web-design">
-
 						<img class="img-responsive project-image" src="assets/pfc.jpg"  alt=""><!--Project thumb -->
 
 						<div class="hover-mask">
@@ -467,7 +401,6 @@
 							data-category="Content Management System"
 							data-date="January 2015"
 							data-client="Pampanga Food Corporation"
-							data-link="http://pampangafood.com"
 							data-descr="website for Pampanga Food Company"
 							data-images="assets/pfc-details.png,assets/pfc-details2.png"
 						>
@@ -558,7 +491,6 @@
 						<div class="sr-only project-description"
 							data-category="Programming Workshop"
 							data-date="March 19, 2016"
-							data-link="http://blog.codemickeycode.com/meet-your-python-for-the-curious-workshop-coaches"
 							data-descr="Python Code Lab at GDG Women TechMakers PH 2016"
 							data-images="assets/wtm-2016-2.jpg,assets/wtm-2016-3.jpg"
 						>
@@ -665,7 +597,7 @@
 		<!-- ==============================================
 		FEATURED PROJECT
 		=============================================== -->
-		<section id="feat-project" class="gray-bg padding-top">
+<!-- 		<section id="feat-project" class="gray-bg padding-top">
 
 			<div class="container">
 
@@ -692,7 +624,7 @@
 			</div>
 
 		</section>
-
+ -->
 		<!-- ==============================================
 		CONTACT
 		=============================================== -->
