Update landing page

--- a/index.html
+++ b/index.html
@@ -136,16 +136,16 @@
 
 				<div class="row services">
 
-<!-- 					<div class="col-md-3 col-sm-6 item scrollimation fade-up">
+					<div class="col-md-3 col-sm-6 item scrollimation fade-up">
 
 						<div class="icon">
-							<img class="img-responsive img-center" src="assets/service1.png" alt="" />
+							<img class="img-responsive img-center" src="assets/service3.png" alt="" />
 						</div>
 
-						<h2>Web &amp; App Design</h2>
-						<p>Donec quam velit, aliquam at tempor quis, blandit quis nisi. Proin orci enim, dictum vel leo eu, blandit vulputate turpis.</p>
+						<h2>Python Training</h2>
+						<p>I design and develop custom in-house courses according to company's goals and needs</p>
 
-					</div> -->
+					</div>
 
 					<div class="col-md-3 col-sm-6 item scrollimation fade-up d1">
 
@@ -154,7 +154,8 @@
 						</div>
 
 						<h2>Web Development - Backend</h2>
-						<p>I build and maintain various websites with Python, Django and Mezzanine</p>
+						<p>I build and maintain various websites with Python, Django and Mezzanine
+						</p>
 
 					</div>
 
