--- a/index.html
+++ b/index.html
@@ -37,10 +37,6 @@
 		JS
 		=============================================== -->
 
-		<!--[if lt IE 9]>
-			<script src="js/respond.min.js"></script>
-		<![endif]-->
-
 		<script type="text/javascript" src="js/libs/modernizr.min.js"></script>
 
 
@@ -83,12 +79,6 @@
 						<li>
 							<a href="#contact" class="scrollto">Contact Me</a>
 						</li>
-<!-- 						<li>
-							<a href="http://blog.codemickeycode.com/" target="_blank">My Blog</a>
-						</li>
-						<li>
-							<a href="http://codehappy.ph/" target="_blank">My Team</a>
-						</li> -->
 					</ul>
 				</div><!--End navbar-collapse -->
 
@@ -110,8 +100,6 @@
 						<h1>Hi, I'm Micaela Reyes</h1>
 						<p>a Software Engineer based in Manila.</p>
 						<p class="text-center"><a class="btn btn-meflat" href="https://codemickeycode.typeform.com/to/dqYjXQ"><i class="fa"></i>Say hello</a></p>
-<!-- 						<h3>codemickeycode.com</h3>
-						<h2>CMS | E-commerce | Web Apps </h2> -->
 					</div>
 
 				</div>
@@ -128,10 +116,7 @@
 			<div class="container">
 
 				<header class="section-header text-center">
-
 					<h1 class="scrollimation scale-in">What I Do</h1>
-<!-- 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/> Aenean purus felis, condimentum et tempor in, commodo id nibh. Fusce a lacus arcu.</p>
- -->
 				</header>
 
 				<div class="row services">
@@ -158,28 +143,6 @@
 						</p>
 
 					</div>
-
-<!-- 					<div class="col-md-3 col-sm-6 item scrollimation fade-up d2">
-
-						<div class="icon">
-							<img class="img-responsive img-center" src="assets/service3.png" alt="" />
-						</div>
-
-						<h2>SEO Content</h2>
-						<p>Donec quam velit, aliquam at tempor quis, blandit quis nisi. Proin orci enim, dictum vel leo eu, blandit vulputate turpis.</p>
-
-					</div>
- -->
-<!-- 					<div class="col-md-3 col-sm-6 item scrollimation fade-up d3">
-
-						<div class="icon">
-							<img class="img-responsive img-center" src="assets/service4.png" alt="" />
-						</div>
-
-						<h2>Mail Campaigns</h2>
-						<p>Donec quam velit, aliquam at tempor quis, blandit quis nisi. Proin orci enim, dictum vel leo eu, blandit vulputate turpis.</p>
-
-					</div> -->
 
 				</div>
 
@@ -215,8 +178,6 @@
 					</div>
 
 				</div>
-
-
 
 				<p class="text-center"><a class="btn btn-meflat scrollto icon-left" href="#contact"><i class="fa fa-arrow-down"></i>Hire Me</a> or <a class="btn btn-meflat" href="http://codehappy.ph/"><i class="fa"></i>Hire My Team</a></p>
 
@@ -283,16 +244,6 @@
 					<div class="row">
 	                    <div class="col-md-12" data-wow-delay="0.2s">
 	                        <div class="carousel slide" data-ride="carousel" id="quote-carousel">
-	                            <!-- Bottom Carousel Indicators -->
-<!-- 	                            <ol class="carousel-indicators">
-	                                <li data-target="#quote-carousel" data-slide-to="0" class="active"><img class="img-responsive " src="https://s3.amazonaws.com/uifaces/faces/twitter/brad_frost/128.jpg" alt="">
-	                                </li>
-	                                <li data-target="#quote-carousel" data-slide-to="1"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/rssems/128.jpg" alt="">
-	                                </li>
-	                                <li data-target="#quote-carousel" data-slide-to="2"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/adellecharles/128.jpg" alt="">
-	                                </li>
-	                            </ol> -->
-
 	                            <!-- Carousel Slides / Quotes -->
 	                            <div class="carousel-inner text-center">
 
@@ -565,32 +516,6 @@
 			</div><!-- End modal -->
 
 		</section>
-		<!-- ==============================================
-		DRIBBLE
-		=============================================== -->
-<!-- 		<section id="dribbble">
-			<h1 class="dribbble-button"><a href="#" target="_blank">My Dribbble Shots</a></h1>
-				<div class="row">
-					<div class="col-md-2 col-sm-4 col-xs-6">
-						<a href="#link" target="_blank"><img class="img-responsive" src="assets/placeholder-375x250.jpg"  alt=""></a>
-					</div>
-					<div class="col-md-2 col-sm-4 col-xs-6">
-						<a href="#link" target="_blank"><img class="img-responsive" src="assets/placeholder-375x250.jpg"  alt=""></a>
-					</div>
-					<div class="col-md-2 col-sm-4 col-xs-6">
-						<a href="#link" target="_blank"><img class="img-responsive" src="assets/placeholder-375x250.jpg"  alt=""></a>
-					</div>
-					<div class="col-md-2 col-sm-4 col-xs-6">
-						<a href="#link" target="_blank"><img class="img-responsive" src="assets/placeholder-375x250.jpg"  alt=""></a>
-					</div>
-					<div class="col-md-2 col-sm-4 col-xs-6">
-						<a href="#link" target="_blank"><img class="img-responsive" src="assets/placeholder-375x250.jpg"  alt=""></a>
-					</div>
-					<div class="col-md-2 col-sm-4 col-xs-6">
-						<a href="#link" target="_blank"><img class="img-responsive" src="assets/placeholder-375x250.jpg"  alt=""></a>
-					</div>
-				</div>
-		</section> -->
 
 		<!-- ==============================================
 		FEATURED PROJECT
@@ -640,25 +565,6 @@
 					<p class="text-center"><a class="btn btn-meflat" href="https://codemickeycode.typeform.com/to/dqYjXQ"><i class="fa"></i>Leave Message</a></p>
 				</header>
 
-<!-- 				<form  id="contact-form" class="bl_form text-center" action="contact.php" method="post" novalidate>
-					<span class="field-wrap scrollimation fade-right">
-						<label class="control-label" for="contact-name">Name</label>
-						<input id="contact-name" name="contactName" type="text" class="label_better requiredField" data-new-placeholder="Name" placeholder="Name" data-error-empty="*Enter your name">
-					</span>
-					<span class="field-wrap scrollimation fade-in">
-						<label class="control-label" for="contact-mail">Email</label>
-						<input id="contact-mail" name="email" type="email" class="label_better requiredField" data-new-placeholder="Email Address" placeholder="Email Address" data-error-empty="*Enter your email" data-error-invalid="x Invalid email address">
-					</span>
-					<span class="field-wrap scrollimation fade-left">
-						<label class="control-label" for="contact-message">Message</label>
-						<textarea id="contact-message" name="comments" rows="1" class="label_better requiredField" data-new-placeholder="Message" placeholder="Message" data-error-empty="*Enter your message"></textarea>
-					</span>
-
-					<p class="text-center"><button  name="submit" type="submit" class="btn btn-meflat icon-left" data-error-message="Error!" data-sending-message="Sending..." data-ok-message="Message Sent"><i class="fa fa-paper-plane"></i>Send Message</button></p>
-					<input type="hidden" name="submitted" id="submitted" value="true" />
-
-				</form> -->
-
 			</div>
 
 		</section>
@@ -678,9 +584,6 @@
 					<div class="col-sm-6">
 						<ul class="social-links">
 							<li class="scrollimation fade-right d4"><a href="https://twitter.com/codemickeycode"><i class="fa fa-twitter fa-fw"></i></a></li>
-<!-- 							<li class="scrollimation fade-right d3"><a href="#link"><i class="fa fa-facebook fa-fw"></i></a></li>
-							<li class="scrollimation fade-right d2"><a href="#link"><i class="fa fa-google-plus fa-fw"></i></a></li> -->
-<!-- 							<li class="scrollimation fade-right d1"><a href="#link"><i class="fa fa-dribbble fa-fw"></i></a></li> -->
 							<li class="scrollimation fade-right"><a href="https://ph.linkedin.com/in/codemickeycode"><i class="fa fa-linkedin fa-fw"></i></a></li>
 							<li class="scrollimation fade-right"><a href="https://github.com/codemickeycode"><i class="fa fa-github fa-fw"></i></a></li>
 							<li class="scrollimation fade-right"><a href="http://blog.codemickeycode.com/"><i class="fa fa-pencil fa-fw"></i></a></li>
@@ -701,7 +604,7 @@
 		<!-- ==============================================
 		SCRIPTS
 		=============================================== -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/libs/jquery-1.9.1.min.js">\x3C/script>')</script>
 
 		<script src="js/libs/bootstrap.min.js"></script>
