--- a/index.html
+++ b/index.html
@@ -314,12 +314,12 @@
 				<!--==== Portfolio Filters ====-->
 				<div id="filter-works">
 					<ul>
-						<li class="active scrollimation fade-right d1">
+<!-- 						<li class="active scrollimation fade-right d1">
 							<a href="#" data-filter="*">All</a>
-						</li>
-						<li class="scrollimation fade-right">
+						</li> -->
+<!-- 						<li class="scrollimation fade-right">
 							<a href="#" data-filter=".web-design">Websites</a>
-						</li>
+						</li> -->
 						<li class="scrollimation fade-left">
 							<a href="#" data-filter=".icons">Workshops</a>
 						</li>
@@ -335,16 +335,14 @@
 
 				<div id="projects-container">
 
-					<article class="project-item web-design">
+<!-- 					<article class="project-item web-design">
 
-						<img class="img-responsive project-image" src="assets/pfc.jpg"  alt=""><!--Project thumb -->
+						<img class="img-responsive project-image" src="assets/pfc.jpg"  alt="">
 
 						<div class="hover-mask">
-							<h2 class="project-title">Pampanga Food Company</h2><!--Project Title -->
-							<p>CMS Website</p><!--Project Subtitle -->
+							<h2 class="project-title">Pampanga Food Company</h2>
+							<p>CMS Website</p>
 						</div>
-
-						<!--==== Project Preview HTML ====-->
 
 						<div class="sr-only project-description"
 							data-category="Content Management System"
@@ -361,7 +359,7 @@
 							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://pampangafood.com">Visit Website<i class="fa fa-arrow-right"></i></a></p>
 						</div>
 
-					</article>
+					</article> -->
 					<!-- ==============================================
 					END PROJECT ITEM
 					=============================================== -->
