--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 				<header class="section-header text-center">
 
 					<h1 class="scrollimation scale-in">My Work</h1>
-					<p>I love building websites and teaching people how to code.<br/></p>
+					<p>I love web apps and teaching people how to code.<br/></p>
 
 				</header>
 
