--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						</div>
 
 						<h2>Web Development - Backend</h2>
-						<p>I build various websites with Python, Django and Mezzanine
+						<p>I build various web apps with Python, Django and Mezzanine
 						</p>
 
 					</div>
