Update landing page

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 						</div>
 
 						<h2>Python Training</h2>
-						<p>I design and develop custom in-house courses according to company's goals and needs</p>
+						<p>I design and develop custom in-house courses according to your company's goals and needs</p>
 
 					</div>
 
