Update landing page

--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
 
 						<p class="text-center scrollimation fade-in">I'm a software engineer with over a decade of experience working in the tech industry, providing valuable expertise to start-up businesses and enterprises.</p>
 
-						<p class="text-center scrollimation fade-in">If you're looking to have a website built, looking for project-based, remote Python devs <i class="fa fa-laptop" aria-hidden="true"></i>, or a Python Trainer<i class="fa chalkboard-teacher" aria-hidden="true"></i>, my team and I can help. Let's talk <i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></p>
+						<p class="text-center scrollimation fade-in">If you're looking for a Python Trainer<i class="fa chalkboard-teacher" aria-hidden="true"></i> or a project-based, remote Python dev <i class="fa fa-laptop" aria-hidden="true"></i>, I can help. Let's talk <i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></p>
 
 					</div>
 
 				</div>
 
-				<p class="text-center"><a class="btn btn-meflat scrollto icon-left" href="#contact"><i class="fa fa-arrow-down"></i>Hire Me</a> or <a class="btn btn-meflat" href="http://codehappy.ph/"><i class="fa"></i>Hire My Team</a></p>
+				<p class="text-center"><a class="btn btn-meflat scrollto icon-left" href="#contact"><i class="fa fa-arrow-down"></i>Hire Me</a></p>
 
 			</div>
 
