Update landing page

--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
 
 						<p class="text-center scrollimation fade-in">I'm a software engineer with over a decade of experience working in the tech industry, providing valuable expertise to start-up businesses and enterprises.</p>
 
-						<p class="text-center scrollimation fade-in">If you're looking for a Python Trainer<i class="fa chalkboard-teacher" aria-hidden="true"></i> or a project-based, remote Python dev <i class="fa fa-laptop" aria-hidden="true"></i>, I can help. Let's talk <i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></p>
+						<p class="text-center scrollimation fade-in">I co-host a monthly tech vlog called <a href="https://pylokal.com">PyLokal</a> where we explore Python and related technologies in the Philippines over coffee and peanut butter. <i class="fa fa-coffee" aria-hidden="true"></i> </p>
+
+						<p class="text-center scrollimation fade-in">If you're looking for a Python Trainer or a project-based, remote Python dev <i class="fa fa-laptop" aria-hidden="true"></i>, I can help. Let's talk <i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></p>
 
 					</div>
 
@@ -411,7 +413,6 @@
 						<div class="sr-only project-description"
 							data-category="Programming Workshop"
 							data-date="May 16, 2015"
-							data-link="https://djangogirls.org/manila/"
 							data-descr="A free programming workshop for women"
 							data-images="assets/skills-and-bugs.jpg,assets/django-girls-group-hug.jpg"
 						>
