Update about me and skills section

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 		<!-- ==============================================
 		SKILLS
 		=============================================== -->
-		<section id="skills" class="white-bg">
+<!-- 		<section id="skills" class="white-bg">
 
 			<div class="container">
 
@@ -228,7 +228,7 @@
 			</div>
 
 
-		</section>
+		</section> -->
 
 		<!-- ==============================================
 		RECOMMENDATIONS
