Update landing page

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 						<p class="text-center scrollimation fade-in">I'm a software engineer with over a decade of experience working in the tech industry, providing valuable expertise to start-up businesses and enterprises.</p>
 
-						<p class="text-center scrollimation fade-in">I co-host a monthly tech vlog called <a href="https://pylokal.com">PyLokal</a> where we explore Python and related technologies in the Philippines over coffee and peanut butter. <i class="fa fa-coffee" aria-hidden="true"></i> </p>
+						<p class="text-center scrollimation fade-in">I co-host a quarterly tech vlog called <a href="https://pylokal.com">PyLokal</a> where we explore Python and related technologies in the Philippines over coffee and peanut butter. <i class="fa fa-coffee" aria-hidden="true"></i> </p>
 
 						<p class="text-center scrollimation fade-in">If you're looking for a Python Trainer or a project-based, remote Python dev <i class="fa fa-laptop" aria-hidden="true"></i>, I can help. Let's talk <i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></p>
 
