--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 						<p class="text-center scrollimation fade-in">I co-host a quarterly tech vlog called <a href="https://pylokal.com">PyLokal</a> where we explore Python and related technologies in the Philippines over coffee and peanut butter. <i class="fa fa-coffee" aria-hidden="true"></i> </p>
 
-						<p class="text-center scrollimation fade-in">If you're looking for a Python Trainer or technical guidance<i class="fa fa-laptop" aria-hidden="true"></i>, I can help. Let's talk <i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></p>
+						<p class="text-center scrollimation fade-in">If you're looking for a Python Trainer or technical guidance &nbsp;<i class="fa fa-laptop" aria-hidden="true"></i>, I can help. Let's talk <i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></p>
 
 					</div>
 
