Update landing page

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 
 						<p class="text-center scrollimation fade-in"><strong>[Community]</strong></p>
-						<p class="text-center scrollimation fade-in">I co-founded <a href="https://python.ph">PythonPH</a> in 2013, a volunteer-run programming community. I spend a lot of my free time as a volunteer doing admin, operations, coaching/mentoring the next gen leaders and organizing events for the community.</p>
+						<p class="text-center scrollimation fade-in">I <strong>co-founded <a href="https://python.ph">PythonPH</a></strong> in 2013, a volunteer-run programming community. I spend a lot of my free time as a volunteer doing admin, operations, coaching/mentoring the next gen leaders and organizing events for the community.</p>
 
 						<p class="text-center"><a class="btn btn-meflat" href="mailto:mickey@codehappy.ph"><i class="fa"></i>Say hello</a></p>
 
