Update landing page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="#recommendations" class="scrollto">Feedback</a>
+							<a href="#recommendations" class="scrollto">Testimonials</a>
 						</li>
 					</ul>
 				</div><!--End navbar-collapse -->
