--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 					</div>
 
 					<div class="col-sm-6 text-right">
-						<p>&copy; 2016 codemickeycode | made with <i class="fa fa-heart"></i> & <i class="fa fa-coffee" aria-hidden="true"></i>&nbsp;by <a href="http://codehappy.ph">CodeHappy.ph</a> in Manila, PH.</p>
+						<p>&copy; 2016 codemickeycode</p>
 					</div>
 
 				</div>
