Update landing page - links

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 <!-- 						<p class="text-center scrollimation fade-in">I co-host a quarterly tech vlog called <a href="https://www.youtube.com/channel/UClVfber_qaE0Eq86_AGqekw">PyLokal</a> where we explore Python and related technologies in the Philippines over coffee and peanut butter. <i class="fa fa-coffee" aria-hidden="true"></i> </p> -->
 
-						<p class="text-center scrollimation fade-in">I currently work as a <strong>Python Coach and Consultant</strong> at <strong>CodeHappy.ph</strong>. If you're looking to build/grow your Python team through training and coaching&nbsp;<i class="fa fa-laptop" aria-hidden="true"></i>, I can help. Let's talk.</p>
+						<p class="text-center scrollimation fade-in">I currently work as a <strong>Python Coach and Consultant</strong> at <strong><a href="https://codehappy.ph">CodeHappy.ph</a></strong>. If you're looking to build/grow your Python team through training and coaching&nbsp;<i class="fa fa-laptop" aria-hidden="true"></i>, I can help. Let's talk.</p>
 
 
 						<p class="text-center scrollimation fade-in"><strong>[Community]</strong></p>
