Add My Work section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<div id="site-nav" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li>
-							<a href="#about" class="scrollto">What I Do</a>
+							<a href="#about" class="scrollto">About Me</a>
 						</li>
 						<li id="logo">
 							<a href="#home" class="scrollto">
@@ -104,13 +104,13 @@
 		<!-- ==============================================
 		ABOUT
 		=============================================== -->
-		<section id="about" class="gray-bg padding-top-bottom">
+		<section id="about" class="white-bg padding-top-bottom">
 
 			<div class="container">
 
 				<header class="section-header text-center">
 
-					<h1 class="scrollimation scale-in">What I Do</h1>
+					<h1 class="scrollimation scale-in">About Me</h1>
 
 				</header>
 
@@ -125,13 +125,14 @@
 						<p class="text-center scrollimation fade-in"><strong>[Work]</strong></p>
 						<p class="text-center scrollimation fade-in">I'm a software engineer with 10+ years experience. I've worked on telco systems, large-scale web applications, and various startup SaaS platforms. I specialize in Python and related technologies.</p>
 
-<!-- 						<p class="text-center scrollimation fade-in">I co-host a quarterly tech vlog called <a href="https://www.youtube.com/channel/UClVfber_qaE0Eq86_AGqekw">PyLokal</a> where we explore Python and related technologies in the Philippines over coffee and peanut butter. <i class="fa fa-coffee" aria-hidden="true"></i> </p> -->
 
 						<p class="text-center scrollimation fade-in">I currently work as a <strong>Python Coach and Consultant</strong> at <strong><a href="https://codehappy.ph">CodeHappy.ph</a></strong>. If you're looking to build/grow your Python team through training and coaching&nbsp;<i class="fa fa-laptop" aria-hidden="true"></i>, I can help. Let's talk.</p>
 
 
 						<p class="text-center scrollimation fade-in"><strong>[Community]</strong></p>
 						<p class="text-center scrollimation fade-in">I <strong>co-founded <a href="https://python.ph">PythonPH</a></strong> in 2013, a volunteer-run programming community. I spend a lot of my free time as a volunteer doing admin, operations, coaching/mentoring the next gen leaders and organizing events for the community.</p>
+
+						<p class="text-center scrollimation fade-in">I also co-host a quarterly tech vlog called <strong><a href="https://www.youtube.com/channel/UClVfber_qaE0Eq86_AGqekw">PyLokal</a></strong> where we explore Python and related technologies in the Philippines over coffee and peanut butter. <i class="fa fa-coffee" aria-hidden="true"></i> </p>
 
 						<p class="text-center"><a class="btn btn-meflat" href="mailto:mickey@codehappy.ph"><i class="fa"></i>Get in touch</a></p>
 
@@ -142,6 +143,253 @@
 <!-- 				<p class="text-center"><a class="btn btn-meflat scrollto icon-left" href="#contact"><i class="fa fa-arrow-down"></i>Hire Me</a></p> -->
 
 			</div>
+
+		</section>
+		<!-- ==============================================
+		SPEAKING
+		=============================================== -->
+<!-- 		<section id="presentations" class="white-bg">
+
+			<div class="container">
+
+				<div class="row">
+
+					<h1 class="text-center scrollimation fade-in">Presentations</h1>
+
+					<div class="left">
+						<p>A list of presentations I did in the past:</p>
+					</div>
+					<div class="text-left">
+						<ul>
+							<li>A Magic Carpet Ride to Python | slides </li>
+
+							<li>Software Engineering and Tech Communities | slides | video </li>
+							<li>Python Tricks You Can't Live Without - A Tribute to PyConPH 2012</li>
+							<li>DFTBA in the Python and Tech Community</li>
+							<li>Python, You, The Community and The Grand Scheme of Things</li>
+							<li>Python and Google App Engine</li>
+						</ul>
+					</div>
+				</div>
+
+			</div>
+
+
+		</section> -->
+
+ 		<!-- ==============================================
+		PORTFOLIO
+		=============================================== -->
+		<section id="portfolio" class="gray-bg padding-top-bottom">
+
+			<div class="container">
+
+				<header class="section-header text-center">
+
+					<h1 class="scrollimation scale-in">My Work</h1>
+					<p>work, community and hobby projects<br/></p>
+
+				</header>
+
+				<!--==== Portfolio Filters ====-->
+				<div id="filter-works">
+					<ul>
+						<li class="active scrollimation fade-right d1">
+							<a href="#" data-filter="*">All</a>
+						</li>
+						<li class="scrollimation fade-right">
+							<a href="#" data-filter=".web-design">Work</a>
+						</li>
+						<li class="scrollimation fade-left">
+							<a href="#" data-filter=".icons">Community</a>
+						</li>
+						<li class="scrollimation fade-left d1">
+							<a href="#" data-filter=".ui-kits">Hobby</a>
+						</li>
+					</ul>
+				</div><!--End portfolio filters -->
+
+			</div><!--End portfolio header -->
+
+			<div class="container masonry-wrapper scrollimation fade-in">
+
+				<div id="projects-container">
+
+<!-- 					<article class="project-item web-design">
+
+						<img class="img-responsive project-image" src="assets/pfc.jpg"  alt="">
+
+						<div class="hover-mask">
+							<h2 class="project-title">Pampanga Food Company</h2>
+							<p>CMS Website</p>
+						</div>
+
+						<div class="sr-only project-description"
+							data-category="Content Management System"
+							data-date="January 2015"
+							data-client="Pampanga Food Corporation"
+							data-descr="website for Pampanga Food Company"
+							data-images="assets/pfc-details.png,assets/pfc-details2.png"
+						>
+							<p>A website made for Pampanga Food Company.
+							</p>
+
+							<p>It has a Content Management System (CMS) which allows the client to customize the contents and add/edit pages whenever needed.</p>
+
+							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://pampangafood.com">Visit Website<i class="fa fa-arrow-right"></i></a></p>
+						</div>
+
+					</article> -->
+					<!-- ==============================================
+					END PROJECT ITEM
+					=============================================== -->
+
+					<article class="project-item icons">
+
+						<img class="img-responsive project-image" src="assets/wtm-2016.jpg"  alt=""><!--Project thumb -->
+
+						<div class="hover-mask">
+							<h2 class="project-title">Python for the Curious Workshop 2016</h2><!--Project Title -->
+							<p>DLSU Taft, March 19 2016</p><!--Project Subtitle -->
+						</div>
+
+						<!--==== Project Preview HTML ====-->
+
+						<div class="sr-only project-description"
+							data-category="Programming Workshop"
+							data-date="March 19, 2016"
+							data-descr="Python Code Lab at GDG Women TechMakers PH 2016"
+							data-images="assets/wtm-2016-2.jpg,assets/wtm-2016-3.jpg"
+						>
+							<p>Have you ever seen a programming language so readable it’s almost pseudocode? So powerful that it’s used to power companies like Instagram, disqus, YouTube, Pinterest and bitbucket? So scientifically friendly that academics everywhere swear by it? So chill that it was named after a sketch comedy troupe?</p>
+
+							<p>Topics Covered:</p>
+							<ul>
+								<li>The Beauty of Python</li>
+								<li>Intro to Python</li>
+								<li>Hands-on Activity: Hackerrank Problems with Python</li>
+								<li>Next Steps: What do to with what you just learned...</li>
+							</ul>
+
+							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://slides.com/pyladiesmanila">Check the slides<i class="fa fa-arrow-right"></i></a></p>
+						</div>
+
+					</article><!--End Project Item -->
+					<article class="project-item icons">
+
+						<img class="img-responsive project-image" src="assets/wtm-2015.jpg"  alt=""><!--Project thumb -->
+
+						<div class="hover-mask">
+							<h2 class="project-title">Python for the Curious Workshop 2015</h2><!--Project Title -->
+							<p>iAcademy Makati, March 2015</p><!--Project Subtitle -->
+						</div>
+
+						<!--==== Project Preview HTML ====-->
+
+						<div class="sr-only project-description"
+							data-category="Programming Workshop"
+							data-date="March 28, 2015"
+							data-descr="Python Code Lab at GDG Women TechMakers PH 2015"
+							data-images="assets/pycurious2015.jpg"
+						>
+							<p>Have you ever seen a programming language so readable it’s almost pseudocode? So powerful that it’s used to power companies like Instagram, disqus, YouTube, Pinterest and bitbucket? So scientifically friendly that academics everywhere swear by it? So chill that it was named after a sketch comedy troupe?</p>
+
+							<p>Topics Covered:</p>
+							<ul>
+								<li>A very brief history of Python</li>
+								<li>The beauty of Python</li>
+								<li>Basic Python Syntax</li>
+								<li>Hands-on Activity</li>
+								<li>The local Python community</li>
+							</ul>
+
+							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://slides.com/pyladiesmanila">Check the slides<i class="fa fa-arrow-right"></i></a></p>
+						</div>
+
+					</article><!--End Project Item -->
+
+					<article class="project-item icons">
+
+						<img class="img-responsive project-image" src="assets/django-girls-2015.jpg"  alt=""><!--Project thumb -->
+
+						<div class="hover-mask">
+							<h2 class="project-title">Django Girls Workshop 2015</h2><!--Project Title -->
+							<p>MozspaceMNL, May 2015</p><!--Project Subtitle -->
+						</div>
+
+						<!--==== Project Preview HTML ====-->
+
+						<div class="sr-only project-description"
+							data-category="Programming Workshop"
+							data-date="May 16, 2015"
+							data-descr="A free programming workshop for women"
+							data-images="assets/skills-and-bugs.jpg,assets/django-girls-group-hug.jpg"
+						>
+							<p>A Django Workshop for Beginners co-organized by <a href="http://www.meetup.com/pyladiesmanila/">PyLadies Manila</a> and <a href="http://djangogirls.org/">Django Girls.</a></p>
+
+							<p>It's a free of charge one-day workshop about the Django web framework using Python. It included a lecture with coaches that guided the participants in making their own web application - a personal blog!</p>
+
+							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://slides.com/pyladiesmanila/djangogirlsmanila">Check the slides<i class="fa fa-arrow-right"></i></a></p>
+						</div>
+
+					</article><!--End Project Item -->
+
+				</div><!-- End projects -->
+
+			</div><!-- End container -->
+
+			<!-- ==============================================
+			PROJECT PREVIEW MODAL (Do not alter this markup)
+			=============================================== -->
+			<div id="project-modal" class="modal fade">
+
+				<div class="modal-dialog">
+
+					<div class="modal-content">
+
+						<div class="modal-header">
+
+							<div class="container">
+
+								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+
+								<h1 id="hdr-title" class="text-center"></h1>
+								<div class="row">
+									<div class="col-md-8 col-md-offset-2">
+										<div class="image-wrapper">
+											<img class="img-responsive" src="assets/chrome.png" alt="">
+											<div class="loader"></div>
+											<div class="screen"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+						</div>
+
+						<div class="modal-body">
+							<div class="container">
+								<div class="row">
+									<div id="project-sidebar" class="col-md-3">
+										<h2 id="sdbr-title"></h2>
+										<p id="sdbr-category"></p>
+										<p id="sdbr-date"></p>
+										<p id="sdbr-client"></p>
+										<p id="sdbr-link"><a href="#link" target="_blank"></a></p>
+										<p id="sdbr-descr"></p>
+									</div>
+									<div id="project-content" class="col-md-8 col-md-offset-1">
+									</div>
+								</div>
+
+							</div>
+						</div><!-- End modal-body -->
+
+					</div><!-- End modal-content -->
+
+				</div><!-- End modal-dialog -->
+
+			</div><!-- End modal -->
 
 		</section>
 
