Add codehappy to my work

--- a/index.html
+++ b/index.html
@@ -215,31 +215,29 @@
 
 				<div id="projects-container">
 
-<!-- 					<article class="project-item web-design">
+					<article class="project-item web-design">
 
-						<img class="img-responsive project-image" src="assets/pfc.jpg"  alt="">
+						<img class="img-responsive project-image" src="assets/codehappy.png"  alt="">
 
 						<div class="hover-mask">
-							<h2 class="project-title">Pampanga Food Company</h2>
-							<p>CMS Website</p>
+							<h2 class="project-title">CodeHappy.ph</h2>
+							<p>a Python training & coaching company</p>
 						</div>
 
 						<div class="sr-only project-description"
-							data-category="Content Management System"
-							data-date="January 2015"
-							data-client="Pampanga Food Corporation"
-							data-descr="website for Pampanga Food Company"
-							data-images="assets/pfc-details.png,assets/pfc-details2.png"
+							data-category="Business"
+							data-descr="started a business :)"
+							data-images="assets/codehappy2.png"
 						>
-							<p>A website made for Pampanga Food Company.
+							<p>a Python training & coaching company.
 							</p>
 
-							<p>It has a Content Management System (CMS) which allows the client to customize the contents and add/edit pages whenever needed.</p>
+							<p>We help teams become successful by enabling their Python development capabilities through our training, coaching and consulting services.</p>
 
-							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://pampangafood.com">Visit Website<i class="fa fa-arrow-right"></i></a></p>
+							<p class="text-right"><a class="btn btn-meflat icon-right" href="https://codehappy.ph">Visit Website<i class="fa fa-arrow-right"></i></a></p>
 						</div>
 
-					</article> -->
+					</article>
 					<!-- ==============================================
 					END PROJECT ITEM
 					=============================================== -->
