Add kaizend to portfolio

--- a/index.html
+++ b/index.html
@@ -244,6 +244,31 @@
 
 					<article class="project-item icons">
 
+						<img class="img-responsive project-image" src="assets/kaizend.png"  alt=""><!--Project thumb -->
+
+						<div class="hover-mask">
+							<h2 class="project-title">PythonPH Kaizend</h2><!--Project Title -->
+							<p>a mstermind group</p><!--Project Subtitle -->
+						</div>
+
+						<!--==== Project Preview HTML ====-->
+
+						<div class="sr-only project-description"
+							data-category="Mastermind Group"
+							data-descr="a mastermind group and exclusive training program for PythonPH volunteers"
+							data-images="assets/kaizend2.png,assets/kaizend3.png"
+						>
+							<p>Kaizend is a mastermind group and exclusive training program for PythonPH core volunteers.</p>
+
+							<p>This program is aimed to develop technically competent leaders and systematize succession plans for PythonPH.</p>
+
+							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://python.ph">Visit PythonPH Website<i class="fa fa-arrow-right"></i></a></p>
+						</div>
+
+					</article><!--End Project Item -->
+
+					<article class="project-item icons">
+
 						<img class="img-responsive project-image" src="assets/wtm-2016.jpg"  alt=""><!--Project thumb -->
 
 						<div class="hover-mask">
